// Copyright 2022 Outreach Corporation. All Rights Reserved.

// Description: This file has the package api.

syntax = "proto3";

package api.v1;

option go_package = "github.com/getoutreach/localizer/api";

message ExposeServiceRequest {
  string namespace = 1;
  string service = 2;
  repeated string port_map = 3;
}

message ListRequest {}

message PingRequest {}

message StopExposeRequest {
  string namespace = 1;
  string service = 2;
}

enum ConsoleLevel {
  CONSOLE_LEVEL_UNSPECIFIED = 0;
  CONSOLE_LEVEL_INFO = 1;
  CONSOLE_LEVEL_WARN = 2;
  CONSOLE_LEVEL_ERROR = 3;
}

// This will be turned into ConsoleResponse to be generic probably some
// time later in the future.
message ConsoleResponse {
  // Output level of this console output
  ConsoleLevel level = 1;

  // Message of this console output
  string message = 2;
}

message PingResponse {}

message ListService {
  string namespace = 1;
  string name = 2;
  string status = 3;
  string endpoint = 4;
  string status_reason = 5;
  string ip = 6;
  repeated string ports = 7;
}

message ListResponse {
  repeated ListService services = 1;
}

message Empty {}

message StableResponse {
  bool stable = 1;
}

service LocalizerService {
  rpc ExposeService(ExposeServiceRequest) returns (stream ConsoleResponse) {}
  rpc StopExpose(StopExposeRequest) returns (stream ConsoleResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Ping(PingRequest) returns (PingResponse) {}
  rpc Kill(Empty) returns (Empty) {}
  rpc Stable(Empty) returns (StableResponse) {}
}
